--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - jruby-18mode
+  - jruby-19mode
+  
 script: "bundle exec rake test"
-
-branches:
-  only:
-    - master
