--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ rvm:
   - 1.9.3
   - jruby-18mode
   - jruby-19mode
-  
+
 script: "bundle exec rake test"
 
-matrix:
-  allow_failures:
-    - rvm: jruby-19mode
+env: TEST=true
