--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - 2.0.0
   - jruby-18mode
   - jruby-19mode
 
@@ -11,5 +12,6 @@ env: TEST=true
 
 matrix:
   allow_failures:
+  	- rvm: 2.0.0
     - rvm: jruby-18mode
     - rvm: jruby-19mode
