--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,23 @@
 rvm:
-  - 1.9.3
-  - 2.0.0
+  - ruby-head
+  - jruby-head
   - jruby-19mode
+  - 2.2
+  - 2.1
+  - 2.0
+os:
+  - linux
+  - osx
+matrix:
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-19mode
+    - rvm: jruby-head
+
+gemfile:
+  - Gemfile
+  - Gemfile-v3
 
 script: "bundle exec rake test"
 
