--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,38 @@
-rvm:
+##
+# Travis YAML
+##
+
+language : ruby
+sudo     : false
+cache    : bundler
+
+before_script :
+  - bundle update
+
+rvm :
   - ruby-head
-  - jruby-head
-  - jruby-19mode
-  - 2.2.2
-  - 2.1
-  - 2.0
-os:
+  - 2.4.0
+  - 2.3.1
+  - 2.2.4
+
+os :
   - linux
-  - osx
-sudo: false
-matrix:
-  fast_finish: true
-  allow_failures:
-    - rvm: ruby-head
-    - rvm: jruby-19mode
-    - rvm: jruby-head
+  # - osx
 
-gemfile:
-  - Gemfile
+matrix :
+  fast_finish    : true
+  allow_failures :
+    - rvm : ruby-head
 
-script: "bundle exec rake test"
+# gemfile:
+#   - Gemfile
 
-env: TEST=true
+script : bundle exec rake test
+
+env :
+  global :
+    - TEST=true
+    # - CODECLIMATE_REPO_TOKEN=81787f7b1c3bfa937edadcafbc94f807bf5af5c1142c7b793f2d9969a271de1f
+
+# notifications :
+#   slack : middleman:JW9OvXmn1m3XrSERe8866nBR
