--- a/.travis.yml
+++ b/.travis.yml
@@ -1,39 +1,29 @@
-##
-# Travis YAML
-##
+language: ruby
+cache: bundler
 
-language : ruby
-sudo     : false
-cache    : bundler
-
-before_script :
-  - bundle update
-
-rvm :
+rvm:
   - ruby-head
-  - 2.4.0
-  - 2.3.1
-  - 2.2.4
+  - 2.5.3
+  - 2.4.5
+  - 2.3.8
 
-os :
+os:
   - linux
-  # - osx
 
 matrix :
-  fast_finish    : true
-  allow_failures :
-    - rvm : ruby-head
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
 
-# gemfile:
-#   - Gemfile
+gemfile:
+  - Gemfile
+  - Gemfile-4.x
 
-script : bundle exec rake test
+script: bundle exec rake test
 
-env :
-  global :
+env:
+  global:
     - TEST=true
-    # - CODECLIMATE_REPO_TOKEN=81787f7b1c3bfa937edadcafbc94f807bf5af5c1142c7b793f2d9969a271de1f
 
 notifications:
   email: false
-  # slack: middleman:JW9OvXmn1m3XrSERe8866nBR
