--- a/fixtures/default-template-app/Gemfile
+++ b/fixtures/default-template-app/Gemfile
@@ -1,6 +1,6 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "middleman", :github => "middleman/middleman"
-gem "middleman-blog", :github => "middleman/middleman-blog"
-gem "middleman-syntax", :github => "middleman/middleman-syntax"
-gem "zurb-foundation", "~> 4.1.6"
+gem 'middleman', github: 'middleman/middleman'
+gem 'middleman-blog', github: 'middleman/middleman-blog'
+gem 'middleman-syntax', github: 'middleman/middleman-syntax'
+gem 'zurb-foundation', '~> 4.1.6'
