--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
+dist: xenial
 language: ruby
 cache: bundler
 
 rvm:
   - ruby-head
-  - 2.6.0
-  - 2.5.3
-  - 2.4.5
-  - 2.3.8
+  - 2.7
+  - 2.6
+  - 2.5
 
 os:
   - linux
@@ -15,12 +15,10 @@ gemfile:
   - Gemfile
   - Gemfile-4.x
 
-matrix :
+jobs:
   fast_finish: true
   allow_failures:
     - rvm: ruby-head
-
-script: bundle exec rake test
 
 env:
   global:
