--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,75 +2,69 @@ require:
   - rubocop-performance
 
 AllCops:
-  NewCops: disable
   TargetRubyVersion: 2.5
   Include:
-    - '**/*.rb'
     - '**/Rakefile'
     - '**/Gemfile'
-    - '**/config.ru'
   Exclude:
-    - 'vendor/**/*'
-    - '**/tmp/**/*'
-    - 'middleman-cli/lib/middleman-cli/templates/**/*'
+  NewCops: disable
+  SuggestExtensions: false
 
-Style/FrozenStringLiteralComment:
-  Enabled: true
-  EnforcedStyle: always
-
-Security/YAMLLoad:
-  Enabled: false
-Style/GuardClause:
-  Enabled: false
+Layout/CaseIndentation:
+  EnforcedStyle: end
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: variable
 Layout/LineLength:
   Enabled: false
-Metrics/MethodLength:
-  Enabled: false
-Style/Documentation:
-  Enabled: false
-Metrics/AbcSize:
-  Enabled: false
-Metrics/CyclomaticComplexity:
-  Enabled: false
-Metrics/BlockLength:
-  Enabled: false
-Metrics/ModuleLength:
-  Enabled: false
-Metrics/PerceivedComplexity:
-  Enabled: false
-Metrics/ClassLength:
-  Enabled: false
-Lint/AmbiguousRegexpLiteral:
-  Enabled: false
-Lint/AmbiguousBlockAssociation:
-  Enabled: false
-Lint/UriEscapeUnescape:
+Layout/SpaceAroundEqualsInParameterDefault:
+  EnforcedStyle: no_space
+
+Lint/AssignmentInCondition:
   Enabled: false
 Lint/SuppressedException:
   Enabled: false
-Lint/ShadowedException:
+
+Metrics/AbcSize:
   Enabled: false
-Naming/FileName:
+Metrics/ClassLength:
   Enabled: false
-Naming/MethodParameterName:
+Metrics/CyclomaticComplexity:
   Enabled: false
-Naming/MemoizedInstanceVariableName:
+Metrics/MethodLength:
   Enabled: false
-Naming/HeredocDelimiterNaming:
+Metrics/PerceivedComplexity:
   Enabled: false
-Security/Eval:
-  Enabled: false
-Style/RegexpLiteral:
+
+Style/BlockDelimiters:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
-Style/MissingRespondToMissing:
+Style/Documentation:
   Enabled: false
-Lint/MissingSuper:
+Style/DoubleNegation:
   Enabled: false
-Style/EvalWithLocation:
+Style/FormatString:
   Enabled: false
-Style/ClassVars:
+Style/FrozenStringLiteralComment:
   Enabled: false
-Style/GlobalVars:
+Style/HashSyntax:
+  EnforcedStyle: ruby19
+Style/MultilineBlockChain:
+  Enabled: false
+Style/ParallelAssignment:
+  Enabled: false
+Style/PerlBackrefs:
+  Enabled: false
+Style/RegexpLiteral:
+  Enabled: false
+Style/SignalException:
+  Enabled: false
+Style/SingleLineBlockParams:
+  Enabled: false
+Style/SpecialGlobalVars:
+  Enabled: false
+Style/TrivialAccessors:
+  Enabled: false
+
+Bundler/OrderedGems:
   Enabled: false
